# Producer-Consumer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
src/: ITstudent.java  Main.java  client.py  config.py  consumer.py  main.py  producer.py  pyproject.toml  server.py  student.py  student.xsd  utils.py
